[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amarin-memory"
version = "0.1.0"
description = "Persistent, adaptive memory for AI agents — semantic search, temporal decay, deduplication, and surprise scoring in a single SQLite file."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "David Flagg", email = "flaggdavid84@gmail.com"},
]
keywords = ["ai", "memory", "agents", "llm", "semantic-search", "vector-database", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "sqlalchemy>=2.0",
    "sqlite-vec>=0.1.1",
    "numpy>=1.24",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/flaggdavid-source/amarin-memory"
Documentation = "https://github.com/flaggdavid-source/amarin-memory#readme"
Repository = "https://github.com/flaggdavid-source/amarin-memory"
Issues = "https://github.com/flaggdavid-source/amarin-memory/issues"
"Ko-fi" = "https://ko-fi.com/davidflagg86433"
